# otomai

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
0/154010883.dlm/0/: 103549440.dlm  119015430.dlm  119016450.dlm  120062470.dlm  120062980.dlm  120063490.dlm  120193540.dlm  147063810.dlm  152832000.dlm  153358340.dlm  153879810.dlm  153881090.dlm  153881600.dlm  154010370.dlm  188482060.dlm  188483080.dlm  188485640.dlm  188744710.dlm  188746240.dlm  188746760.dlm  188875270.dlm  189530630.dlm  189531150.dlm  189531650.dlm  189661710.dlm  189793280.dlm  189793800.dlm  190055940.dlm  190056450.dlm  190448640.dlm  190578690.dlm  190579200.dlm  190580740.dlm  190581250.dlm  190710790.dlm  190841860.dlm  190972420.dlm  191102980.dlm  191103490.dlm  191104000.dlm  (+14 more)
0/154010883.dlm/1/: 101713411.dlm  101715461.dlm  119800321.dlm  120587781.dlm  120588801.dlm  120590851.dlm  120592901.dlm  122159621.dlm  122160641.dlm  147063811.dlm  153879301.dlm  153879811.dlm  153880321.dlm  153881601.dlm  154010371.dlm  154010881.dlm  188744711.dlm  188747271.dlm  188875271.dlm  189530121.dlm  189530631.dlm  189531141.dlm  189531651.dlm  189792261.dlm  189793801.dlm  189794311.dlm  189794821.dlm  189923841.dlm  190054401.dlm  190056451.dlm  190056961.dlm  190579201.dlm  190580481.dlm  190580741.dlm  190581251.dlm  190581761.dlm  190841601.dlm  190842371.dlm  190972421.dlm  191104001.dlm  (+6 more)
0/154010883.dlm/2/: 103547392.dlm  119013382.dlm  120062982.dlm  147064322.dlm  152307202.dlm  152835072.dlm  153355272.dlm  153358342.dlm  153879552.dlm  154010372.dlm  188482052.dlm  188483082.dlm  188743682.dlm  188744192.dlm  188744712.dlm  188746242.dlm  188746752.dlm  189530112.dlm  189530122.dlm  189530632.dlm  189531142.dlm  189532162.dlm  189792262.dlm  189793802.dlm  190055942.dlm  190056962.dlm  190318592.dlm  190579712.dlm  190581252.dlm  190582272.dlm  190710272.dlm  190842882.dlm  190843392.dlm  190972422.dlm  191104002.dlm  191106052.dlm  191234562.dlm  192413702.dlm  192414722.dlm  192415752.dlm  (+7 more)
0/154010883.dlm/3/: 101713413.dlm  101715463.dlm  119800323.dlm  120064003.dlm  120588803.dlm  120590853.dlm  120591873.dlm  121375233.dlm  122159623.dlm  122160643.dlm  152045573.dlm  153880323.dlm  154010373.dlm  188743683.dlm  188744193.dlm  189530113.dlm  189530123.dlm  189531143.dlm  189532163.dlm  189661703.dlm  189792263.dlm  189792513.dlm  189792773.dlm  189793283.dlm  189793793.dlm  189794313.dlm  189923843.dlm  190054403.dlm  190056453.dlm  190579203.dlm  190581763.dlm  190842113.dlm  190842373.dlm  190842883.dlm  191104003.dlm  193200643.dlm  193332743.dlm  81527303.dlm
0/154010883.dlm/5/: 97255965.dlm  (+34 more)
config/: auth.toml  world.toml
crates/dofus-auth/: Cargo.toml
crates/dofus-auth/src/: crypto.rs  handler.rs  identification.rs  main.rs  server_selection.rs
crates/dofus-common/: Cargo.toml
crates/dofus-database/: Cargo.toml
crates/dofus-io/: Cargo.toml
crates/dofus-ipc/: Cargo.toml
crates/dofus-network/: Cargo.toml
crates/dofus-network/src/: codec.rs  server.rs  session.rs
crates/dofus-protocol/: Cargo.toml
crates/dofus-world/: Cargo.toml
crates/dofus-world/src/: character_selection.rs  chat.rs  constants.rs  emotes.rs  game_context.rs  handler.rs  inventory.rs  main.rs  map_cache.rs  movement.rs  npc.rs  quests.rs  social.rs  spells.rs  stats.rs  ticket.rs  world.rs
crates/dofus-world/src/fight/: buffs.rs  damage.rs  displacement.rs  effects.rs  end.rs  init.rs  marks.rs  mod.rs  serialization.rs  spells.rs  state.rs  states.rs  summons.rs  turns.rs
crates/dofus-world/src/fight/spells/: dispatch.rs  loading.rs  mod.rs  validation.rs
crates/dofus-world/src/fight/state/: fight.rs  fighter.rs  mod.rs  tests.rs  types.rs
crates/dofus-world/src/game_context/: enter_world.rs  entity_look.rs  map_complementary.rs  mod.rs  tests.rs
crates/dofus-world/src/handlers/: approach.rs  combat.rs  mod.rs  roleplay.rs  session.rs
crates/dofus-world/src/movement/: mod.rs  timing.rs  transition.rs
crates/dofus-world/src/npc/: actors.rs  dialogue.rs  look.rs  mod.rs  tests.rs
crates/dofus-world/src/quests/: d2o.rs  flags.rs  mod.rs  objectives.rs  rewards.rs  tracking.rs
crates/dofus-world/src/world/: actors.rs  mod.rs  state.rs  tests.rs
keys/: private.pem  public.pem
tools/data-reader/: Cargo.toml
tools/data-reader/src/: d2i.rs  d2i_writer.rs  d2o.rs  d2o_writer.rs  d2p.rs  d2p_writer.rs  main.rs  serve.rs  tests.rs
tools/data-reader/src/frontend/: index.html
tools/generator-rsa/: Cargo.toml
tools/generator-rsa/src/: main.rs  swf_patch.rs
tools/protocol-gen/: Cargo.toml
(+628 files in other folders)
