[package]
name = "dofus-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
dofus-io = { workspace = true }
dofus-protocol = { workspace = true }
dofus-common = { workspace = true }
dofus-database = { workspace = true }
dofus-network = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
pkcs1 = { workspace = true }
pkcs8 = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
