[package]
name = "data-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
