[package]
name = "data-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
dofus-common = { path = "../../crates/dofus-common" }
dofus-database = { path = "../../crates/dofus-database" }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
